--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil.html
@@ -14,8 +14,8 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
-    text: "Back to task list",
-    href: "/lpa-questionnaire/"+version+"/task-list"
+    text: "Back",
+    href: "javascript:history.go(-1);"
   }) }}
 {% endblock %}
 
