--- a/app/views/lpa-questionnaire/fullv1/representations/site-owners.html
+++ b/app/views/lpa-questionnaire/fullv1/representations/site-owners.html
@@ -13,8 +13,8 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
-    text: "Back to task list",
-    href: "/lpa-questionnaire/"+version+"/task-list"
+    text: "Back",
+    href: "javascript:history.go(-1);"
   }) }}
 {% endblock %}
 
@@ -69,7 +69,6 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-
           {% if 'Statutory consultees' in data['lpaq-'+version+'-representations-whichparties'] %}
             <a class="govuk-link" href="statutory-consultees">Skip this question</a>
           {% elseif 'Other parties' in data['lpaq-'+version+'-representations-whichparties'] %}
