--- a/app/views/index.html
+++ b/app/views/index.html
@@ -177,60 +177,6 @@
         <div class="govuk-accordion__section">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
-              <span class="govuk-accordion__section-button" id="accordion-default-heading-trackmyappeal">
-                Track my appeal
-              </span>
-            </h2>
-          </div>
-          <div id="accordion-default-content-trackmyappeal" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-trackmyappeal">
-
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-
-                <div class="govuk-inset-text govuk-!-margin-top-0">
-                  <h3 class="govuk-heading-m">
-                    Version 3 - Track my appeal with security
-                    <!--{{ govukTag({
-                      classes: "govuk-tag--grey govuk-!-margin-left-1",
-                      text: "Archived"
-                    }) }}-->
-                  </h3>
-                  <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                      <a href="/track-my-appeal/v3/stage1-mvp/email/your-planning-appeal" title="">Stage 1 - Appeal received (MVP)</a>
-                    </li>
-                    <li>
-                      <a href="/track-my-appeal/v3/stage1/email/your-planning-appeal" title="">Stage 1 - Appeal received with appeal details</a>
-                    </li>
-                    <li>
-                      <a href="/track-my-appeal/v3/stage2/email/council-evidence" title="">Stage 2 - Case file submitted by LPA</a>
-                    </li>
-                  </ul>
-
-                  <details class="govuk-details" data-module="govuk-details">
-                    <summary class="govuk-details__summary">
-                      <span class="govuk-details__summary-text">
-                        Jira Tickets (2)
-                      </span>
-                    </summary>
-                    <div class="govuk-details__text">
-                      <ul class="govuk-list govuk-list-bulleted">
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-2129">AS-2129</a> - Security - Accessing Track my Appeal</li>
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-1355">AS-1355</a> - Appellant's view of appeal status following LPA Questionnaire submission (stage 2)</li>
-                      </ul>
-                    </div>
-                  </details>
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="govuk-accordion__section">
-          <div class="govuk-accordion__section-header">
-            <h2 class="govuk-accordion__section-heading">
               <span class="govuk-accordion__section-button" id="accordion-default-heading-validationofficer">
                 Validation Officer
               </span>
@@ -1293,6 +1239,60 @@
               </div>
 
             </div>
+          </div>
+        </div>
+
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-trackmyappeal">
+                Track my appeal
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-trackmyappeal" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-trackmyappeal">
+
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-full">
+
+                <div class="govuk-inset-text govuk-!-margin-top-0">
+                  <h3 class="govuk-heading-m">
+                    Version 3 - Track my appeal with security
+                    <!--{{ govukTag({
+                      classes: "govuk-tag--grey govuk-!-margin-left-1",
+                      text: "Archived"
+                    }) }}-->
+                  </h3>
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                      <a href="https://has-appeal.herokuapp.com/track-my-appeal/v3/stage1-mvp/email/your-planning-appeal" target="_blank">Stage 1 - Appeal received (MVP)</a>
+                    </li>
+                    <li>
+                      <a href="https://has-appeal.herokuapp.com/track-my-appeal/v3/stage1/email/your-planning-appeal" target="_blank">Stage 1 - Appeal received with appeal details</a>
+                    </li>
+                    <li>
+                      <a href="https://has-appeal.herokuapp.com/track-my-appeal/v3/stage2/email/council-evidence" target="_blank">Stage 2 - Case file submitted by LPA</a>
+                    </li>
+                  </ul>
+
+                  <details class="govuk-details" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        Jira Tickets (2)
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-2129">AS-2129</a> - Security - Accessing Track my Appeal</li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-1355">AS-1355</a> - Appellant's view of appeal status following LPA Questionnaire submission (stage 2)</li>
+                      </ul>
+                    </div>
+                  </details>
+                </div>
+
+              </div>
+            </div>
+
           </div>
         </div>
 
