--- a/app/views/index.html
+++ b/app/views/index.html
@@ -477,6 +477,10 @@ service-start{% extends "layout.html" %}
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
+                  <p class="govuk-body">
+                    Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
+                  </p>
+
                   <!-- save and return version 3 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
@@ -484,10 +488,6 @@ service-start{% extends "layout.html" %}
                       classes: "govuk-tag--green govuk-!-margin-bottom-3",
                       text: "Ready for UR"
                     }) }}
-
-                    <p class="govuk-body">
-                      Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
-                    </p>
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       ‘Save and return’ - version 3
@@ -624,12 +624,14 @@ service-start{% extends "layout.html" %}
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--blue govuk-!-margin-bottom-3",
+                      text: "Complete"
                     }) }}
 
                     <p class="govuk-body">
-                      Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
+                      <a href="https://miro.com/app/board/uXjVOCk3Ac8=/">
+                        Miro research notes (Finland, sprint 12)
+                      </a>
                     </p>
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
@@ -761,19 +763,16 @@ service-start{% extends "layout.html" %}
                         </ul>
                       </div>
                     </details>
+
                   </div>
 
                   <!-- save and return version 1 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--blue govuk-!-margin-bottom-3",
+                      text: "Complete"
                     }) }}
-
-                    <p class="govuk-body">
-                      Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
-                    </p>
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       ‘Save and return’ - version 1
@@ -882,6 +881,7 @@ service-start{% extends "layout.html" %}
                         </ul>
                       </div>
                     </details>
+
                   </div>
 
                 </div>
