--- a/app/views/appellant-submission/v14/full/appeal-documents/planning-obligation.html
+++ b/app/views/appellant-submission/v14/full/appeal-documents/planning-obligation.html
@@ -64,7 +64,7 @@ Do you plan to submit a planning obligation to support your appeal? - Upload doc
           </summary>
           <div class="govuk-details__text">
             <p class="govuk-body">
-              A planning obligation is when you agree to do something if your development goes ahead. This is usually to help manage your development's impact on the surrounding area.
+              A planning obligation is a legal agreement linked to your planning permission. It confirms that you agree to do or not do something if your development goes ahead. This is usually to help manage your development's impact on the area.
             </p>
             <p class="govuk-body">
               For example, you might agree to:
@@ -76,10 +76,10 @@ Do you plan to submit a planning obligation to support your appeal? - Upload doc
               <li>
                 help fund improvements to nearby roads, if your development will increase traffic
               </li>
+              <li>
+                only use your garden building as an annexe for family members, instead of a holiday let
+              </li>
             </ul>
-            <p class="govuk-body">
-              A planning obligation is a legal document. When the agreement is between you and the local planning department, it's called a 'section 106 agreement'. When the agreement is between you and another party, it's called a 'unilateral undertaking'.
-            </p>
           </div>
         </details>
 
