--- a/app/views/save-progress/v3/request-code.html
+++ b/app/views/save-progress/v3/request-code.html
@@ -33,7 +33,7 @@
       </label>
 
       <p class="govuk-body">
-        Emails sometimes take a few minutes to arrive. If you do not receive the email, you can request a new one.
+        Emails sometimes take a few minutes to arrive. If you do not receive the code, you can request a new one.
       </p>
 
       {{ govukButton({
