--- a/app/views/_layouts/layout-pins.html
+++ b/app/views/_layouts/layout-pins.html
@@ -3,6 +3,12 @@
 {# Add a body class to override things if needed #}
 {% set bodyClasses = 'internal' %}
 
+{# Add the title(h1) to page title if it's set, add to each page with:
+{% set title = 'Example' %} #}
+{% block pageTitle %}
+	{{ title+' –' if title }} {{ serviceName }} – Planning Inspectorate
+{% endblock %}
+
 {% block header %}
 	{# Change the header for PINS apps, eg LPA product #}
 
