Find and comment on appeal

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -111,9 +111,18 @@
 
     {% set commentHTML %}
       <h2 class="govuk-heading-m">
-        Find and comment on an appeal
+        Interested parties
       </h2>
-      <p>Coming soon…</p>
+
+      <!-- <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Find an appeal
+      </h3> -->
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="appeal/find-appeal/">Find and comment on an appeal</a>
+        </li>
+      </ul>  
+
     {% endset -%}
 
     {{ govukTabs({
