Updates to index and cover screen

--- a/app/views/appeal/find-appeal/index.html
+++ b/app/views/appeal/find-appeal/index.html
@@ -32,12 +32,17 @@
     </h2>
 
     <p class="govuk-body">
+      This is the previous design work for interested parties, finding and commenting on an appeal.
+    </p>
+
+    <p class="govuk-body">
       Changes:
     </p>
 
     <ul class="govuk-list govuk-list--bullet">
       <li>moved the work to the new prototype (<a href="https://pins-appeals.herokuapp.com/interested-party/v4/guidance" class="govuk-link govuk-link--no-visited-state">see version 4</a>)</li>
-      <li>Updates to follow…</li>
+      <li>updated the colour of the appeal tags to align them with GDS style</li>
+      <li>iteration to follow to update some of the patterns here</li>
     </ul>
 
     {{ govukButton({
