--- a/app/views/index.html
+++ b/app/views/index.html
@@ -119,9 +119,9 @@
       </h3> -->
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="appeal/find-appeal/">Find and comment on an appeal</a>
+          <a href="appeal/find-appeal/">Find and comment on an appeal (design work in progress from May 2022)</a>
         </li>
-      </ul>  
+      </ul>
 
     {% endset -%}
 
