--- a/app/views/appeal/save-and-return/index.html
+++ b/app/views/appeal/save-and-return/index.html
@@ -72,6 +72,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li><a href="v{{version}}/email--saved">Email: Your appeal has been saved</a></li>
       <li><a href="v{{version}}/email--code">Email: Your security code</a></li>
+      <li><a href="v{{version}}/appeal-unavailable">Appeal unavailable</a></li>
       <li><a href="v{{version}}/your-appeals">Your appeals</a></li>
     </ul>
 
