--- a/app/views/_includes/rule-6/table-r6-timings.html
+++ b/app/views/_includes/rule-6/table-r6-timings.html
@@ -11,7 +11,7 @@
   rows: [
     {
       key: {
-        html: 'Witness timings for other party 1',
+        html: 'Witness timings',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -31,7 +31,7 @@
   rows: [
     {
       key: {
-        html: 'Witness timings for other party 2',
+        html: 'Witness timings',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -51,7 +51,7 @@
   rows: [
     {
       key: {
-        html: 'Witness timings for other party 3',
+        html: 'Witness timings',
         classes: 'govuk-!-width-one-third'
       },
       value: {
