--- a/app/views/manage/appeals/search/xgovnav/active-search-applied.html
+++ b/app/views/manage/appeals/search/xgovnav/active-search-applied.html
@@ -23,7 +23,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal reference number, site address, LPA reference number, and appellant name
+            You can search by appeal number, site address, LPA reference number, and appellant name
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;">
